# DeepSpot2Cell

./: .gitignore  README.md  environment.yaml  pyproject.toml  requirements.txt  setup.py
configs/: dataset.example.yaml  training.example.yaml
deepspot2cell/: __init__.py  dataloader.py  dataset_creation.py  loss.py  model.py
deepspot2cell/utils/: __init__.py  utils.py  utils_dataloader.py  utils_image.py
example_data/: README.md
scripts/: train.py
tutorials/: GettingStartedWithDeepSpot2Cell_1_preprocessing.ipynb  GettingStartedWithDeepSpot2Cell_2_training.ipynb  GettingStartedWithDeepSpot2Cell_3_inference.ipynb  README.md  notebook_utils.py
